tests/snapshots/snapshots__reject_bad_iterator.snap
---
source: tests/snapshots.rs
expression: "parse_diag(\"function f(t) for x in each(t) do end end\")"
---
error[E0203]: generic `for` may only iterate with `ipairs(...)` or `pairs(...)`
  --> 1:24
   |
  1| function f(t) for x in each(t) do end end
   |                        ^^^^
